feat(queryset): add select_related FK chain resolution and JOIN ON generation